--- a/index.html
+++ b/index.html
@@ -11,60 +11,56 @@
     <body>
         <div class="body-container">
             <div class="top-product">
-                <img class="product-image" src="images/product1.jpg" alt="Product 1">
+                <img class="product-image" src="images/box.png" alt="Product 1">
                 <h3>Product 1</h3>
                 <p>Price: $10.00</p>
                 <button type="button" onclick="alert('Added to cart!')">Add to Cart</button>
             </div>
             <div class="top-product">
-                <img class="product-image" src="images/product2.jpg" alt="Product 2">
+                <img class="product-image" src="images/box.png" alt="Product 2">
                 <h3>Product 2</h3>
                 <p>Price: $20.00</p>
                 <button type="button" onclick="alert('Added to cart!')">Add to Cart</button>
             </div>
             <div class="top-product">
-                <img class="product-image" src="images/product3.jpg" alt="Product 3">
+                <img class="product-image" src="images/box.png" alt="Product 3">
                 <h3>Product 3</h3>
                 <p>Price: $30.00</p>
                 <button type="button" onclick="alert('Added to cart!')">Add to Cart</button>
             </div>
         </div>
 
-        <section> 
+        <section class="section-product-container"> 
             <div class="section-container">
-                <h2>Featured Product</h2>
+                <img class="product-image" src="images/box.png" alt="Product 4">
                 <div class="section-product">
-                    <img class="product-image" src="images/product4.jpg" alt="Product 4">
+                    <h2>Featured Product</h2>
                     <h3>Product 4</h3>
                     <p>Price: $40.00</p>
                     <button type="button" onclick="alert('Added to cart!')">Add to Cart</button>
                 </div>
             </div>
-        </section>
 
-        <section>
             <div class="section-container">
-                <h2>Best Seller</h2>
+                <img class="product-image" src="images/box.png" alt="Product 5">
                 <div class="section-product">
-                    <img class="product-image" src="images/product5.jpg" alt="Product 5">
+                    <h2>Best Seller</h2>
                     <h3>Product 5</h3>
                     <p>Price: $50.00</p>
                     <button type="button" onclick="alert('Added to cart!')">Add to Cart</button>
                 </div>
             </div>
-        </section>
 
-        <section>
             <div class="section-container">
-                <h2>On Sale</h2>
+                <img class="product-image" src="images/box.png" alt="Product 6">
                 <div class="section-product">
-                    <img class="product-image" src="images/product6.jpg" alt="Product 6">
+                    <h2>On Sale</h2>
                     <h3>Product 6</h3>
                     <p>Price: $60.00</p>
                     <button type="button" onclick="alert('Added to cart!')">Add to Cart</button>
                 </div>
             </div>
-            
+        </section>
     </body>
 
     <iframe class="footer-frame" src="footer.html"></iframe>
