section product styling

--- a/index.html
+++ b/index.html
@@ -32,33 +32,69 @@
 
         <section class="section-product-container"> 
             <div class="section-container">
-                <img class="product-image" src="images/box.png" alt="Product 4">
-                <div class="section-product">
+                <div class="section-container-image-div">
+                    <img class="product-image" src="images/box.png" alt="Product 6">
+                </div>
+                <div class="section-product-info-div">
                     <h2>Featured Product</h2>
                     <h3>Product 4</h3>
-                    <p>Price: $40.00</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe nobis porro nisi voluptates atque itaque molestias laboriosam quia fugiat nihil, aspernatur culpa iusto, cumque non accusantium labore cupiditate alias beatae.</p>
+                    <p class="product-price"> Price: $40.00</p>
                     <button type="button" onclick="alert('Added to cart!')">Add to Cart</button>
                 </div>
             </div>
 
             <div class="section-container">
-                <img class="product-image" src="images/box.png" alt="Product 5">
-                <div class="section-product">
-                    <h2>Best Seller</h2>
-                    <h3>Product 5</h3>
-                    <p>Price: $50.00</p>
+                <div class="section-container-image-div">
+                    <img class="product-image" src="images/box.png" alt="Product 6">
+                </div>
+                <div class="section-product-info-div">
+                    <h2>Featured Product</h2>
+                    <h3>Product 4</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe nobis porro nisi voluptates atque itaque molestias laboriosam quia fugiat nihil, aspernatur culpa iusto, cumque non accusantium labore cupiditate alias beatae.</p>
+                    <p class="product-price"> Price: $40.00</p>
                     <button type="button" onclick="alert('Added to cart!')">Add to Cart</button>
                 </div>
             </div>
 
             <div class="section-container">
-                <img class="product-image" src="images/box.png" alt="Product 6">
-                <div class="section-product">
-                    <h2>On Sale</h2>
-                    <h3>Product 6</h3>
-                    <p>Price: $60.00</p>
+                <div class="section-container-image-div">
+                    <img class="product-image" src="images/box.png" alt="Product 6">
+                </div>
+                <div class="section-product-info-div">
+                    <h2>Featured Product</h2>
+                    <h3>Product 4</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe nobis porro nisi voluptates atque itaque molestias laboriosam quia fugiat nihil, aspernatur culpa iusto, cumque non accusantium labore cupiditate alias beatae.</p>
+                    <p class="product-price"> Price: $40.00</p>
                     <button type="button" onclick="alert('Added to cart!')">Add to Cart</button>
                 </div>
+            </div>
+        </section>
+
+        <section class="section-home-blurb">
+            <div class="blurb-color-div">
+                <img class="blurb-image"/>
+            </div>
+            <div class="blurb-text-div">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta sunt, omnis nam esse tempora, optio hic in magni doloribus sed, atque quas ipsa vero reiciendis nemo odio consectetur ipsum. Nesciunt!
+            </div>
+        </section>
+
+        <section class="section-home-blurb">
+            <div class="blurb-color-div">
+                <img class="blurb-image"/>
+            </div>
+            <div class="blurb-text-div">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta sunt, omnis nam esse tempora, optio hic in magni doloribus sed, atque quas ipsa vero reiciendis nemo odio consectetur ipsum. Nesciunt!
+            </div>
+        </section>
+
+        <section class="section-home-blurb">
+            <div class="blurb-color-div">
+                <img class="blurb-image"/>
+            </div>
+            <div class="blurb-text-div">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta sunt, omnis nam esse tempora, optio hic in magni doloribus sed, atque quas ipsa vero reiciendis nemo odio consectetur ipsum. Nesciunt!
             </div>
         </section>
     </body>
