added other page header and footers

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
                 <img class="blurb-image"/>
             </div>
             <div class="blurb-text-div">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta sunt, omnis nam esse tempora, optio hic in magni doloribus sed, atque quas ipsa vero reiciendis nemo odio consectetur ipsum. Nesciunt!
+                <h2 class="blurb-header"> Product Blurb Header</h2>
+                <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta sunt, omnis nam esse tempora, optio hic in magni doloribus sed, atque quas ipsa vero reiciendis nemo odio consectetur ipsum. Nesciunt! </p>
             </div>
         </section>
 
@@ -85,7 +86,8 @@
                 <img class="blurb-image"/>
             </div>
             <div class="blurb-text-div">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta sunt, omnis nam esse tempora, optio hic in magni doloribus sed, atque quas ipsa vero reiciendis nemo odio consectetur ipsum. Nesciunt!
+                <h2 class="blurb-header"> Product Blurb Header</h2>
+                <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta sunt, omnis nam esse tempora, optio hic in magni doloribus sed, atque quas ipsa vero reiciendis nemo odio consectetur ipsum. Nesciunt! </p>
             </div>
         </section>
 
@@ -94,7 +96,8 @@
                 <img class="blurb-image"/>
             </div>
             <div class="blurb-text-div">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta sunt, omnis nam esse tempora, optio hic in magni doloribus sed, atque quas ipsa vero reiciendis nemo odio consectetur ipsum. Nesciunt!
+                <h2 class="blurb-header"> Product Blurb Header</h2>
+                <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta sunt, omnis nam esse tempora, optio hic in magni doloribus sed, atque quas ipsa vero reiciendis nemo odio consectetur ipsum. Nesciunt! </p>
             </div>
         </section>
     </body>
