--- a/product.html
+++ b/product.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
+
+<iframe class="header-frame" src="header.html"></iframe>
+
 <body>
     <header>
         <h1>Product Name</h1>
@@ -21,8 +24,7 @@
             </div>
         </section>
     </main>
-    <footer>
-        <p>&copy; 2023 Your Company Name. All rights reserved.</p>
-    </footer>
+
+    <iframe class="footer-frame" src="footer.html"></iframe>
 </body>
 </html>
