--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    
+    <iframe class="header-frame" src="header.html"></iframe>
     <header>
         <h1>Contact Us</h1>
     </header>
@@ -24,8 +27,6 @@
             <button type="submit">Submit</button>
         </form>
     </main>
-    <footer>
-        <p>&copy; 2023 Your Company. All rights reserved.</p>
-    </footer>
+    <iframe class="footer-frame" src="footer.html"></iframe>
 </body>
 </html>
