--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <section class="section-home-blurb">
             <div class="blurb-color-div">
-                <img class="blurb-image"/>
+                <img class="blurb-image" src="images/box.png"/>
             </div>
             <div class="blurb-text-div">
                 <h2 class="blurb-header"> Product Blurb Header</h2>
@@ -83,7 +83,7 @@
 
         <section class="section-home-blurb">
             <div class="blurb-color-div">
-                <img class="blurb-image"/>
+                <img class="blurb-image" src="images/box.png"/>
             </div>
             <div class="blurb-text-div">
                 <h2 class="blurb-header"> Product Blurb Header</h2>
@@ -93,7 +93,7 @@
 
         <section class="section-home-blurb">
             <div class="blurb-color-div">
-                <img class="blurb-image"/>
+                <img class="blurb-image" src="images/box.png"/>
             </div>
             <div class="blurb-text-div">
                 <h2 class="blurb-header"> Product Blurb Header</h2>
