--- a/header.html
+++ b/header.html
@@ -1,8 +1,6 @@
-<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
 
     <body>
@@ -17,9 +15,9 @@
                         <li><a href="product.html" target="_parent">Product</a></li>
                         <li><a href="about.html" target="_parent">About</a></li>
                         <li><a href="contact.html" target="_parent">Contact</a></li>
-        
                     </ul>
                 </nav>
+            </div>
         </header>
     </body>
 </html>
