--- a/product.html
+++ b/product.html
@@ -7,12 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<iframe class="header-frame" src="header.html"></iframe>
-
 <body>
-    <header>
-        <h1>Product Name</h1>
-    </header>
+  <iframe class="header-frame" src="header.html" height="100%"></iframe>
+  <header>
+    <h1> Product Page</h1>
+  </header>
     <main>
         <section class="product-details">
             <img src="product-image.jpg" alt="Product Image" class="product-image">
