added hero image

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     </head>
     <iframe class="header-frame" src="header.html"></iframe>
     <body>
+      <div class="hero-container">
+        <img class="hero-image" src="images/box.png" alt="Product 1">
+      </div>
+
         <div class="body-container">
             <div class="top-product">
                 <img class="product-image" src="images/box.png" alt="Product 1">
