added layout for content rows

--- a/index.html
+++ b/index.html
@@ -8,29 +8,34 @@
     <iframe class="header-frame" src="header.html"></iframe>
     <body>
       <div class="hero-container">
-        <img class="hero-image" src="images/box.png" alt="Product 1">
+        <img class="hero-image" src="" alt="Product 1">
+        <a> Visit </a>
+        <a> Things To Do </a>
+        <a> Wildlife </a>
+        <a> Shop </a>
+        <a> Our Mission </a>
       </div>
 
-        <div class="body-container">
-            <div class="top-product">
-                <img class="product-image" src="images/box.png" alt="Product 1">
-                <h3>Product 1</h3>
-                <p>Price: $10.00</p>
-                <button type="button" onclick="alert('Added to cart!')">Add to Cart</button>
-            </div>
-            <div class="top-product">
-                <img class="product-image" src="images/box.png" alt="Product 2">
-                <h3>Product 2</h3>
-                <p>Price: $20.00</p>
-                <button type="button" onclick="alert('Added to cart!')">Add to Cart</button>
-            </div>
-            <div class="top-product">
-                <img class="product-image" src="images/box.png" alt="Product 3">
-                <h3>Product 3</h3>
-                <p>Price: $30.00</p>
-                <button type="button" onclick="alert('Added to cart!')">Add to Cart</button>
-            </div>
+        <!--
+          hero 
+          rows 
+            offerings
+            meet the critters
+            map
+            partners
+            newsletter
+            social media          
+        -->
+
+        <div class="journal-row-container">
+          <h1> Journal </h1>
+          <p> More About Squonk </p>
+          <div class="journal-row-image"> 
+            <img alt="a picture of a dog sized creature with a sad face" src="images/squonk.jpg">
+          </div>
         </div>
+
+
 
         <section class="section-product-container"> 
             <div class="section-container">
