--- a/footer.html
+++ b/footer.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <footer>
-            <p>&copy; 2021 E-Commerce</p>
+            <p>&copy; 2024 Xeno - Zoo</p>
         </footer>
     </body>
 </html>
