hero section styling

--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@
       <iframe class="header-frame" src="header.html"></iframe>
       <!-- hero -->
       <div class="hero-container">
+        <div class="hero-header-text-container">
+          <h1 class="hero-header-text"> Discover a world of enchanting and fascinating creatures not found anywhere else in the world</h1>
+        </div>
 
-        <h1 class="hero-header-text"> Discover a world of enchanting and fascinating creatures not found anywhere else in the world</h1>
-        <img class="hero-image" alt="a picture of a zoo" src="images/zoo.jpg">
+        <div class="hero-image-container">
+          <img class="hero-image" alt="a picture of a zoo" src="images/zoo.jpg">
+
+        </div>
       </div>
  
       <!-- meet the critters -->
