added images and journal entry

--- a/index.html
+++ b/index.html
@@ -26,18 +26,19 @@
         </div>
 
         <div class="hero-image-container">
-          <img class="hero-image" alt="a picture of a zoo" src="images/zoo.jpg">
-
+          <img class="hero-image" alt="a crowd of people look into a zoo enclosure with a large lizard in it" src="images\norman_rockwell_style_scary_zo.webp">
         </div>
       </div>
  
       <!-- meet the critters -->
 
       <div class="journal-row-container">
-        <h1> Journal </h1>
-        <p> More About Squonk </p>
-        <div class="journal-row-image"> 
-          <img alt="a picture of a wrinkly dog sized creature with a sad face" src="images/squonk.jpg">
+        <div class="journal-entry-container">
+          <h1> Meet the Squonk </h1>
+          <p> The Squonk is a creature that is known for its ability to cry itself into a puddle of tears. </p>
+          <div class="journal-row-image"> 
+            <img alt="a picture of a wrinkly dog sized creature with a sad face" src="images/squonk.jpg">
+          </div>
         </div>
       </div>
 
