added pictures to new journal entries

--- a/index.html
+++ b/index.html
@@ -31,13 +31,28 @@
       </div>
  
       <!-- meet the critters -->
-
       <div class="journal-row-container">
         <div class="journal-entry-container">
           <h1> Meet the Squonk </h1>
           <p> The Squonk is a creature that is known for its ability to cry itself into a puddle of tears. </p>
           <div class="journal-row-image"> 
-            <img alt="a picture of a wrinkly dog sized creature with a sad face" src="images/squonk.jpg">
+            <img alt="a picture of a wrinkly dog sized creature with a sad face" src="..\images\norman_rockwell_style_scary_zo (16).jpeg">
+          </div>
+        </div>
+
+        <div>
+          <h1> The Liger Hunts </h1>
+          <p> The Liger is a mix between a lion and a tiger </p>
+          <div class="journal-row-image"> 
+            <img alt="a picture of a rabbit with antlers" src="..\images\norman_rockwell_style_scary_zo (2).jpeg">
+          </div>
+        </div>
+
+        <div>
+          <h1> See the Hodag </h1>
+          <p> The Hodag is a creature that is known for its ability to breathe fire. </p>
+          <div class="journal-row-image"> 
+            <img alt="a picture of a creature with a large mouth and sharp teeth" src="..\images\norman_rockwell_style_scary_zo (6).jpeg">
           </div>
         </div>
       </div>
