added containers to home page

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 
       <!-- zoo tour options -->
-      <div>
+      <div class="tour-options-container">
         <h1> Zoo Tour Options </h1>
         <div class="zoo-tour-container">
           <div class="zoo-tour">
@@ -84,9 +84,13 @@
       </div>
 
       <!-- map -->
+      <div class="map-container">
+        <h1> Map of the Zoo </h1>
+        <img alt="a map of the zoo" src="images/zoo-map.jpg">
+      </div>
 
       <!-- partners -->
-       <div>
+       <div class="partner-container">
         Meet some of our sponsors and partners!
         <div class="partner-container">
           <div class="partner">
@@ -105,14 +109,17 @@
             <p> A description of partner 3. </p>
           </div>
        </div>
+       </div>
 
       <!-- newsletter -->
       <!-- email sign up form for newsletter -->
-      <form>
-        <label for="email">Sign up for our newsletter</label>
-        <input type="email" id="email" name="email" placeholder="Enter your email">
-        <input type="submit" value="Submit">
-      </form>
+      <div class="newsletter-form-container">
+        <form>
+          <label for="email">Sign up for our newsletter</label>
+          <input type="email" id="email" name="email" placeholder="Enter your email">
+          <input type="submit" value="Submit">
+        </form>
+      </div>
 
       <!-- social media section -->
       <div class="social-media-container">
@@ -123,8 +130,6 @@
       </div>
 
     </body>
-
-
 
     <iframe class="footer-frame" src="footer.html"></iframe>
 </html>
