changed class names to more general for reuse

--- a/index.html
+++ b/index.html
@@ -31,84 +31,81 @@
       </div>
  
       <!-- meet the critters -->
-      <div class="journal-row-container">
-        <div class="journal-entry-container">
+      <div class="three-panel-row-container">
+        <div class="card-three-element">
           <h1> Meet the Squonk </h1>
           <p> The Squonk is a creature that is known for its ability to cry itself into a puddle of tears. </p>
-          <div class="journal-row-image"> 
+          <div class="panel-row-image"> 
             <img alt="a picture of a wrinkly dog sized creature with a sad face" src="..\images\norman_rockwell_style_scary_zo (16).jpeg">
           </div>
         </div>
 
-        <div>
+        <div class="card-three-element">
           <h1> The Liger Hunts </h1>
           <p> The Liger is a mix between a lion and a tiger </p>
-          <div class="journal-row-image"> 
+          <div class="panel-row-image"> 
             <img alt="a picture of a rabbit with antlers" src="..\images\norman_rockwell_style_scary_zo (2).jpeg">
           </div>
         </div>
 
-        <div>
+        <div class="card-three-element">
           <h1> See the Hodag </h1>
           <p> The Hodag is a creature that is known for its ability to breathe fire. </p>
-          <div class="journal-row-image"> 
+          <div class="panel-row-image"> 
             <img alt="a picture of a creature with a large mouth and sharp teeth" src="..\images\norman_rockwell_style_scary_zo (6).jpeg">
           </div>
         </div>
       </div>
 
-
       <!-- zoo tour options -->
-      <div class="tour-options-container">
         <h1> Zoo Tour Options </h1>
-        <div class="zoo-tour-container">
-          <div class="zoo-tour">
+        <div class="three-panel-row-container">
+          <div class="card-four-element">
             <img alt="a picture of a zoo tour" src="images/zoo-tour.jpg">
             <h2> Guided Zoo Tour </h2>
             <p> A guided tour of the zoo with a knowledgeable guide. </p>
             <p> $50 </p>
           </div>
-          <div class="zoo-tour">
+          <div class="card-four-element">
             <img alt="a picture of a zoo tour" src="images/zoo-tour.jpg">
             <h2> Self-Guided Zoo Tour </h2>
             <p> A self-guided tour of the zoo. </p>
             <p> $25 </p>
           </div>
-          <div class="zoo-tour">
+          <div class="card-four-element">
             <img alt="a picture of a zoo tour" src="images/zoo-tour.jpg">
             <h2> Virtual Zoo Tour </h2>
             <p> A virtual tour of the zoo. </p>
             <p> $10 </p>
           </div>
         </div>
-      </div>
 
       <!-- map -->
-      <div class="map-container">
+      <div class="two-panel-row-container">
         <h1> Map of the Zoo </h1>
         <img alt="a map of the zoo" src="images/zoo-map.jpg">
       </div>
 
       <!-- partners -->
-       <div class="partner-container">
+       <div class="three-panel-row-container">
         Meet some of our sponsors and partners!
-        <div class="partner-container">
-          <div class="partner">
-            <img alt="a picture of a partner" src="images/partner.jpg">
-            <h2> Partner 1 </h2>
-            <p> A description of partner 1. </p>
-          </div>
-          <div class="partner">
-            <img alt="a picture of a partner" src="images/partner.jpg">
-            <h2> Partner 2 </h2>
-            <p> A description of partner 2. </p>
-          </div>
-          <div class="partner">
-            <img alt="a picture of a partner" src="images/partner.jpg">
-            <h2> Partner 3 </h2>
-            <p> A description of partner 3. </p>
-          </div>
-       </div>
+          <div class="partner-container">
+            <div class="partner">
+              <img alt="a picture of a partner" src="images/partner.jpg">
+              <h2> Partner 1 </h2>
+              <p> A description of partner 1. </p>
+            </div>
+            <div class="partner">
+              <img alt="a picture of a partner" src="images/partner.jpg">
+              <h2> Partner 2 </h2>
+              <p> A description of partner 2. </p>
+            </div>
+            <div class="partner">
+              <img alt="a picture of a partner" src="images/partner.jpg">
+              <h2> Partner 3 </h2>
+              <p> A description of partner 3. </p>
+            </div>
+        </div>
        </div>
 
       <!-- newsletter -->
