--- a/index.html
+++ b/index.html
@@ -35,25 +35,19 @@
         <div class="card-three-element">
           <h1> Meet the Squonk </h1>
           <p> The Squonk is a creature that is known for its ability to cry itself into a puddle of tears. </p>
-          <div class="panel-row-image"> 
             <img alt="a picture of a wrinkly dog sized creature with a sad face" src="..\images\norman_rockwell_style_scary_zo (16).jpeg">
-          </div>
         </div>
 
         <div class="card-three-element">
           <h1> The Liger Hunts </h1>
           <p> The Liger is a mix between a lion and a tiger </p>
-          <div class="panel-row-image"> 
-            <img alt="a picture of a rabbit with antlers" src="..\images\norman_rockwell_style_scary_zo (2).jpeg">
-          </div>
+          <img alt="a picture of a rabbit with antlers" src="..\images\norman_rockwell_style_scary_zo (2).jpeg">
         </div>
 
         <div class="card-three-element">
           <h1> See the Hodag </h1>
           <p> The Hodag is a creature that is known for its ability to breathe fire. </p>
-          <div class="panel-row-image"> 
-            <img alt="a picture of a creature with a large mouth and sharp teeth" src="..\images\norman_rockwell_style_scary_zo (6).jpeg">
-          </div>
+          <img alt="a picture of a creature with a large mouth and sharp teeth" src="..\images\norman_rockwell_style_scary_zo (6).jpeg">
         </div>
       </div>
 
@@ -89,18 +83,18 @@
       <!-- partners -->
        <div class="three-panel-row-container">
         Meet some of our sponsors and partners!
-          <div class="partner-container">
-            <div class="partner">
-              <img alt="a picture of a partner" src="images/partner.jpg">
+          <div class="three-panel-row-container">
+            <div class="card-three-element">
+              <img class="three-panel-image" alt="a picture of a partner" src="images/partner.jpg">
               <h2> Partner 1 </h2>
               <p> A description of partner 1. </p>
             </div>
-            <div class="partner">
+            <div class="card-three-element">
               <img alt="a picture of a partner" src="images/partner.jpg">
               <h2> Partner 2 </h2>
               <p> A description of partner 2. </p>
             </div>
-            <div class="partner">
+            <div class="card-three-element">
               <img alt="a picture of a partner" src="images/partner.jpg">
               <h2> Partner 3 </h2>
               <p> A description of partner 3. </p>
@@ -110,7 +104,7 @@
 
       <!-- newsletter -->
       <!-- email sign up form for newsletter -->
-      <div class="newsletter-form-container">
+      <div class="single-center-panel-row">
         <form>
           <label for="email">Sign up for our newsletter</label>
           <input type="email" id="email" name="email" placeholder="Enter your email">
@@ -119,11 +113,10 @@
       </div>
 
       <!-- social media section -->
-      <div class="social-media-container">
+      <div class="single-center-panel-row">
         <a href="https://www.facebook.com/"><img src="images/facebook.png" alt="facebook"></a>
         <a href="https://www.instagram.com/"><img src="images/instagram.png" alt="instagram"></a>
         <a href="https://www.twitter.com/"><img src="images/twitter.png" alt="twitter"></a>
-        <a href="https://www.pinterest.com/"><img src="images/pinterest.png" alt="pinterest"></a>
       </div>
 
     </body>
