--- a/index.html
+++ b/index.html
@@ -35,24 +35,25 @@
         <div class="card-three-element">
           <h1> Meet the Squonk </h1>
           <p> The Squonk is a creature that is known for its ability to cry itself into a puddle of tears. </p>
-            <img alt="a picture of a wrinkly dog sized creature with a sad face" src="..\images\norman_rockwell_style_scary_zo (16).jpeg">
+          <img class="three-panel-image" alt="a picture of a wrinkly dog sized creature with a sad face" src="..\images\norman_rockwell_style_scary_zo (16).jpeg">
         </div>
 
         <div class="card-three-element">
           <h1> The Liger Hunts </h1>
           <p> The Liger is a mix between a lion and a tiger </p>
-          <img alt="a picture of a rabbit with antlers" src="..\images\norman_rockwell_style_scary_zo (2).jpeg">
+          <img class="three-panel-image" alt="a picture of a rabbit with antlers" src="..\images\norman_rockwell_style_scary_zo (2).jpeg">
         </div>
 
         <div class="card-three-element">
           <h1> See the Hodag </h1>
           <p> The Hodag is a creature that is known for its ability to breathe fire. </p>
-          <img alt="a picture of a creature with a large mouth and sharp teeth" src="..\images\norman_rockwell_style_scary_zo (6).jpeg">
+          <img class="three-panel-image" alt="a picture of a creature with a large mouth and sharp teeth" src="..\images\norman_rockwell_style_scary_zo (6).jpeg">
         </div>
       </div>
 
       <!-- zoo tour options -->
-        <h1> Zoo Tour Options </h1>
+       <div class="zoo-tour-container">
+        <h1 class="row-header"> Zoo Tour Options </h1>
         <div class="three-panel-row-container">
           <div class="card-four-element">
             <img alt="a picture of a zoo tour" src="images/zoo-tour.jpg">
@@ -73,6 +74,7 @@
             <p> $10 </p>
           </div>
         </div>
+        <div>
 
       <!-- map -->
       <div class="two-panel-row-container">
