hero styling editing

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       <div class="hero-container">
         <div class="hero-header-text-container">
           <h1 class="hero-header-text"> Discover a world of enchanting and fascinating creatures not found anywhere else in the world</h1>
+          <button class="hero-button"> Buy Tickets </button>
+          <button class="hero-button"> Learn More </button>
         </div>
 
         <div class="hero-image-container">
