updated images for tours

--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
         <h1 class="row-header"> Zoo Tour Options </h1>
         <div class="three-panel-row-container">
           <div class="card-four-element">
-            <img alt="a picture of a zoo tour" src="images/zoo-tour.jpg">
+            <img class= "three-panel-image" alt="a picture of a zoo tour" src="images/guided tour.png">
             <h2> Guided Zoo Tour </h2>
             <p> A guided tour of the zoo with a knowledgeable guide. </p>
             <p> $50 </p>
           </div>
           <div class="card-four-element">
-            <img alt="a picture of a zoo tour" src="images/zoo-tour.jpg">
+            <img class= "three-panel-image" alt="a picture of a zoo tour" src="images/self-guided tour.jpeg">
             <h2> Self-Guided Zoo Tour </h2>
             <p> A self-guided tour of the zoo. </p>
             <p> $25 </p>
           </div>
           <div class="card-four-element">
-            <img alt="a picture of a zoo tour" src="images/zoo-tour.jpg">
+            <img class= "three-panel-image" alt="a picture of a zoo tour" src="images/virtual tour.jpeg">
             <h2> Virtual Zoo Tour </h2>
             <p> A virtual tour of the zoo. </p>
             <p> $10 </p>
