set two panel rows for zoo tour section

--- a/index.html
+++ b/index.html
@@ -56,28 +56,36 @@
 
       <!-- zoo tour options -->
        <div class="zoo-tour-container">
-        <h1 class="row-header"> Zoo Tour Options </h1>
-        <div class="three-panel-row-container">
-          <div class="card-four-element">
-            <img class= "three-panel-image" alt="a picture of a zoo tour" src="images/guided tour.png">
-            <h2> Guided Zoo Tour </h2>
-            <p> A guided tour of the zoo with a knowledgeable guide. </p>
-            <p> $50 </p>
+          <h1 class="row-header"> Zoo Tour Options </h1>
+
+          <div class="two-panel-row-container">
+            <h2 class="two-panel-row-header"> Self-Guided Zoo Tour</h2>
+            <div class="card-three-element">
+              <img class= "three-panel-image" alt="a picture of a zoo tour" src="images/self-guided tour.jpeg">
+              <p> Take your time while listening to our recorded exhibit stories and facts </p>
+              <p> $25 </p>
+            </div>
           </div>
-          <div class="card-four-element">
-            <img class= "three-panel-image" alt="a picture of a zoo tour" src="images/self-guided tour.jpeg">
-            <h2> Self-Guided Zoo Tour </h2>
-            <p> A self-guided tour of the zoo. </p>
-            <p> $25 </p>
+
+          <div class="two-panel-row-container-reverse">
+            <h2 class="two-panel-row-header"> Virtual Zoo Tour </h2>
+            <div class="card-three-element">
+              <img class= "three-panel-image" alt="a picture of a zoo tour" src="images/virtual tour.jpeg">
+              <p> A virtual tour of the zoo. </p>
+              <p> $10 </p>
+            </div>
           </div>
-          <div class="card-four-element">
-            <img class= "three-panel-image" alt="a picture of a zoo tour" src="images/virtual tour.jpeg">
-            <h2> Virtual Zoo Tour </h2>
-            <p> A virtual tour of the zoo. </p>
-            <p> $10 </p>
+
+          <div class="two-panel-row-container">
+            <h2 class="two-panel-row-header"> Guided Zoo Tour </h2>
+            <div class="card-three-element">
+              <img class= "three-panel-image" alt="a picture of a zoo tour" src="images/guided tour.png">
+              <p> A guided tour of the zoo with a knowledgeable guide. </p>
+              <p> $50 </p>
+            </div>
           </div>
+
         </div>
-        <div>
 
       <!-- map -->
       <div class="two-panel-row-container">
