--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 
       <!-- map -->
       <div class="two-panel-row-container">
-        <h1> Map of the Zoo </h1>
-        <img alt="a map of the zoo" src="images/zoo-map.jpg">
+        <h1 class="two-panel-row-header"> Map of the Zoo </h1>
+        <img class="three-panel-image" alt="a map of the zoo" src="images/zoo map.png">
       </div>
 
       <!-- partners -->
