added partner images, social media images

--- a/index.html
+++ b/index.html
@@ -94,25 +94,23 @@
       </div>
 
       <!-- partners -->
-       <div class="three-panel-row-container">
-        Meet some of our sponsors and partners!
-          <div class="three-panel-row-container">
+       <div class="four-panel-row-container">
+        <h2>Meet some of our sponsors and partners!</h2>
             <div class="card-three-element">
-              <img class="three-panel-image" alt="a picture of a partner" src="images/partner.jpg">
+              <img class="three-panel-image" alt="a picture of a partner" src="images/church.jpeg">
               <h2> Partner 1 </h2>
               <p> A description of partner 1. </p>
             </div>
             <div class="card-three-element">
-              <img alt="a picture of a partner" src="images/partner.jpg">
+              <img class="three-panel-image" alt="a picture of a partner" src="images/art museum.jpeg">
               <h2> Partner 2 </h2>
               <p> A description of partner 2. </p>
             </div>
             <div class="card-three-element">
-              <img alt="a picture of a partner" src="images/partner.jpg">
+              <img class="three-panel-image" alt="a picture of a partner" src="images/leviathan cruises.webp">
               <h2> Partner 3 </h2>
               <p> A description of partner 3. </p>
             </div>
-        </div>
        </div>
 
       <!-- newsletter -->
@@ -127,9 +125,9 @@
 
       <!-- social media section -->
       <div class="single-center-panel-row">
-        <a href="https://www.facebook.com/"><img src="images/facebook.png" alt="facebook"></a>
-        <a href="https://www.instagram.com/"><img src="images/instagram.png" alt="instagram"></a>
-        <a href="https://www.twitter.com/"><img src="images/twitter.png" alt="twitter"></a>
+        <a href="https://www.facebook.com/"><img class="logo-image" src="images/logos/facebook logo.png" alt="facebook"></a>
+        <a href="https://www.instagram.com/"><img class="logo-image" src="images/logos/instagram logo.png" alt="instagram"></a>
+        <a href="https://www.twitter.com/"><img class="logo-image" src="images/logos/twitter logo.png" alt="twitter"></a>
       </div>
 
     </body>
